<resources>
    <string name="app_name">GUARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Skip"><u>Skip</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Sign In</string>
    <string name="number_phone">number Phone</string>
    <string name="password">password</string>
    <string name="forgetpassword">forget password</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="forget_password">forget PassWord</string>
    <string name="please_enter_the_registered_mobile_number">Please enter the registered mobile number</string>
    <string name="send">send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_enter_the_code_sent">Please enter the code sent</string>
    <string name="please_enter_new_password">Please Enter new password</string>
    <string name="confart_new_password">conform new password</string>
    <string name="passwordnew"> new password</string>
    <string name="reternsendpassword">return send password</string>
    <string name="return_send_password"><u>return_send 1:32</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_email_looking_for_ajob"> Create Email </string>
    <string name="name_user">name User</string>
    <string name="yes">I agree to the terms of use</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="commercial_registration_no">Commercial Registration No</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="Headquarters">Headquarters</string>
    <string name="commercial_register_photo">commercial register photo</string>
    <string name="login"> Sign in</string>
    <string name="createperson">Create a job seeker account</string>
    <string name="createAdmin">Create an employer account</string>
    <string name="confirm_password">confirm password</string>
    <string name="casepassword">Password does not match</string>
    <string name="lantghpassword">The password is less than 8 characters</string>
    <string name="casenumberphone">The number phone is less than 11 characters</string>
    <string name="caseemail">Invalid email</string>

    <string name="verifyaccount">VerifyAccount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_the_application">About the application</string>
    <string name="latest_news">latest news</string>
    <string name="add_information">add_information</string>
    <string name="show_all_jobs">Show All Jobs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_iformation">Add iformation</string>
    <string name="guard">guard</string>
    <string name="organizer">Organizer</string>
    <string name="volunteer">volunteer</string>
    <string name="full_name">full name</string>
    <string name="the_age">the age</string>
    <string name="qualification">Qualification</string>
    <string name="personal_picture">personal picture</string>
    <string name="experience">experience</string>
    <string name="national_identification_number">National Identification Number</string>
    <string name="attach_the_national_id_or_residence">Attach the national ID or residence</string>
    <string name="bank_account">Bank account</string>
    <string name="do_you_have_experience">Do you have experience?</string>
    <string name="previous_military_experience">Previous military experience</string>
    <string name="experienced_in_the_field_of_security">Experienced in the field of security</string>
    <string name="there_is_no_experience">There is no experience</string>
    <string name="share">share</string>
    <string name="posation">posation</string>
    <string name="gender">gender</string>
    <string name="country">Country</string>
    <string name="social_status">Social status</string>
    <string name="job_offers">job offers</string>
    <string name="appear">appear</string>
    <string name="my_subscriptions">my subscriptions</string>
    <string name="cities_to_work_in">Cities to work in</string>
    <string name="message">Message</string>
    <string name="subscriptions">subscriptions</string>
    <string name="technical_support">technical support</string>
    <string name="sign_out">Sign Out</string>
    <string name="choosegender">choose gender</string>

    <string name="male">male</string>
    <string name="female">female</string>
    <string name="package_">package</string>
    <string name="Chosedistrict">chose district</string>
    <string name="ChoseCity">chose city</string>
    <string name="Chose_Cities_to_work_in">Chose Cities to work in</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Chose_Social_status">Chose Social status</string>
    <string name="single">single</string>
    <string name="married">married</string>
    <string name="expertise_in_the_English_language"> expertise in the English language</string>
    <string name="poor">poor</string>
    <string name="good">good</string>
    <string name="very_good">very good</string>
    <string name="excellent">excellent</string>
    <string name="Chose_Experience">Chose Experience</string>
    <string name="from_1_year_to_5_years">from 1 year to 5 years</string>
    <string name="from_6_year_to_10_years">from 6 year to 10 years</string>
    <string name="staff">Staff</string>
    <string name="staff_request">Staff request</string>
    <string name="search_for_employees">Search for employees</string>
    <string name="search">Search</string>
    <string name="the_required_number">The required number</string>
    <string name="specified_number">specified number</string>
    <string name="the_total_number">the total number</string>
    <string name="staff_list">Staff List</string>
    <string name="select_all"><u>select all</u></string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="tax_15">tax (15%)</string>

    <string name="single_price">Single price</string>
    <string name="the_number">the number</string>
    <string name="single_package">Single Package</string>
    <string name="intredaction">All prices are inclusive of value added tax - tax number 2314567812</string>
    <string name="reced">Bill</string>
    <string name="send_show_posaition">Send Show posaition</string>
    <string name="age_from">age from</string>
    <string name="age_to">age to</string>
    <string name="Chose_Job_title">Chose Job title</string>
    <string name="security_guard">security guard</string>
    <string name="Organizer">Organizer</string>
    <string name="volunteer_">volunteer</string>
    <string name="done">Your CV has been successfully published</string>
    <string name="error">Resume has not been published due to incomplete payment</string>
    <string name="primary">primary</string>
    <string name="middle">middle</string>
    <string name="secondary">secondary</string>
    <string name="other">other</string>
    <string name="least_18_workers">Enter an age of at least 18 years old</string>
    <string name="than_60_years_old">Enter an age of no more than 60 years old</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notification">notification</string>
    <string name="upload_a_file">upload a file</string>
    <string name="a_photo_or_video_to_illustrate_the_problem">A photo or video to illustrate the problem</string>
    <string name="message_text">Message text</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="call_us">call us</string>
    <string name="messages">Messages</string>
    <string name="I_agree">Ok</string>
    <string name="trinslation">You can only enter this field after logging in</string>
    <string name="error_diloge">Error</string>
    <string name="buying">buying</string>
    <string name="Please_select">Please select the employees</string>
    <string name="send_offer_job">Send offer Job</string>
    <string name="You_have_added">You have added the data previously, you can modify it from the profile</string>
    <string name="edit_my_data">Edit my data</string>
    <string name="city">city</string>
    <string name="the_number_of_working_hours">The number of working hours</string>
    <string name="rest_days">Rest days</string>
    <string name="salary">Salary</string>
    <string name="Last_date_for_admission">Last date for admission</string>
    <string name="not_Found_Data">There is no content to watch here yet</string>
    <string name="casemessage">The message sent successfully</string>
    <string name="not_completed">Purchase was not completed due to incomplete payment</string>
    <string name="days_left">days left</string>
    <string name="last_Update">last Update</string>
    <string name="function">Function</string>
    <string name="citys">City</string>
    <string name="Last_date">Last date for admission</string>
    <string name="target_number">Target number</string>
    <string name="subscribe">Subscribe</string>
    <string name="send_offers_job">Send offer Job</string>
    <string name="accept">Accept</string>
    <string name="cancel">cancel</string>
    <string name="offers_job">Offers Job</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="languageAr">Arabic</string>
    <string name="languageEn">English</string>
    <string name="send_offer_jobs">Send Offer Job</string>
    <string name="one_day">one_day</string>
    <string name="two_day">one_day</string>
    <string name="chose_number_work">chose number holidays Days</string>
    <string name="the_number_of_working_days">The number of working days</string>
    <string name="working_hours">working hours</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Terms_and_Conditions">Terms and Conditions</string>
    <string name="update">Update Profile</string>
    <string name="typecompany">Chose type company</string>
    <string name="Posted_on">Posted on</string>
    <string name="subscribe_now">subscribe now</string>
    <string name="upload_photo">upload Photo</string>
    <string name="upload_video">upload Video</string>
    <string name="please_select_how_you_want_to_lift_them">Please Select How You Want To Lift Them</string>
    <string name="lift_type">Lift Type</string>
    <string name="last_date_to_accept">last date to accept</string>
    <string name="Choose_the_nature">Choose the nature of work</string>
    <string name="detilse">في حال اختيار اخرى برجاء تحديد طبيعة العمل</string>
    <string name="reed_oll_notification">Reed Oll notification</string>
    <string name="update_password">Update Password</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="update_number_phone">Update number phone</string>
    <string name="You_cannot_modify">You cannot modify your data before adding it, add the data first</string>
    <string name="send_a_group_message">Send a group message</string>
    <string name="Order_status">Order status</string>
    <string name="offer_accepted">Offer accepted</string>
    <string name="offer_rejected">Offer rejected</string>
    <string name="no_response_as_of_now">No response as of now</string>
    <string name="group_message">group message</string>


</resources>