<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:id="@+id/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff"
        android:textColor="#13718D"
        android:textSize="@dimen/_20sdp"
        android:id="@+id/textadd"
        android:fontFamily="@font/notolkeaarabic_bold"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <ImageView
        android:id="@+id/filter"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"

        android:background="@drawable/style_buttonsignup"

        android:fontFamily="@font/notolkeaarabic_bold"

        android:src="@drawable/filter"
        android:gravity="center"
        android:textAllCaps="false"

        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"

        app:backgroundTintMode="add"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textadd"
        app:layout_constraintBottom_toBottomOf="@id/textadd"
        android:layout_marginEnd="@dimen/_40sdp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#13718D"
        android:text="@string/qualification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/filter"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"

        android:textSize="@dimen/_15sdp"
        android:id="@+id/textexpa" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textexpa"
        app:layout_constraintStart_toStartOf="@+id/textexpa"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:textColor="#13718D"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/primary"
            android:id="@+id/radioButton1"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"

            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/middle"
            android:id="@+id/radioButton2"
            android:layout_marginTop="@dimen/_10sdp"

            android:textStyle="bold"
            android:textColor="#13718D"

            android:checked="false"
            android:textSize="@dimen/_13sdp"

            />

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/secondary"
            android:layout_marginTop="@dimen/_10sdp"

            android:id="@+id/radioButton3"
            android:textStyle="bold"
            android:textColor="#13718D"

            android:checked="false"
            android:textSize="@dimen/_13sdp"

            />
    </RadioGroup>
<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/_1sdp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="#13718D"
    app:layout_constraintTop_toBottomOf="@id/radioGroup"
    android:layout_marginTop="@dimen/_10sdp"
    android:id="@+id/viewone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#13718D"
        android:text="@string/experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"

        android:textSize="@dimen/_15sdp"
        android:id="@+id/textexorinces" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"

        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textexorinces"
        app:layout_constraintStart_toStartOf="@+id/textexorinces"
        android:id="@+id/radioGroup2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:textColor="#13718D"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/from_1_year_to_5_years"
            android:id="@+id/radioButton1ex"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"

            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/from_6_year_to_10_years"
            android:id="@+id/radioButton2exp"
            android:layout_marginTop="@dimen/_10sdp"

            android:textStyle="bold"
            android:textColor="#13718D"

            android:checked="false"
            android:textSize="@dimen/_13sdp"

            />


    </RadioGroup>
   <View
       android:layout_width="match_parent"
       android:layout_height="@dimen/_1sdp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:background="#13718D"

       app:layout_constraintTop_toBottomOf="@id/radioGroup2"
       android:layout_marginTop="@dimen/_10sdp"
       android:id="@+id/viewthree"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#13718D"
        android:text="@string/expertise_in_the_English_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewthree"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"

        android:textSize="@dimen/_15sdp"
        android:id="@+id/textEngilsh" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textEngilsh"
        app:layout_constraintStart_toStartOf="@+id/textexpa"
        android:id="@+id/radioGroup3">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:textColor="#13718D"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/poor"
            android:id="@+id/radioButton1Engilsh"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"

            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/good"
            android:id="@+id/radioButton2Endilsh"
            android:layout_marginTop="@dimen/_10sdp"

            android:textStyle="bold"
            android:textColor="#13718D"

            android:checked="false"
            android:textSize="@dimen/_13sdp"

            />

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/very_good"
            android:layout_marginTop="@dimen/_10sdp"

            android:id="@+id/radioButton3Endilsh"
            android:textStyle="bold"
            android:textColor="#13718D"

            android:checked="false"
            android:textSize="@dimen/_13sdp"

            />
        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/excellent"
            android:layout_marginTop="@dimen/_10sdp"

            android:id="@+id/radioButton4Endilsh"
            android:textStyle="bold"
            android:textColor="#13718D"

            android:checked="false"
            android:textSize="@dimen/_13sdp"

            />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#13718D"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup3"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/viewfore"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#13718D"
        android:text="@string/qualification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewfore"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"

        android:textSize="@dimen/_15sdp"
        android:id="@+id/textcity" />
    <Spinner
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:backgroundTint="@null"

        android:backgroundTintMode="add"
        android:background="@drawable/style_button"


        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcity" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#13718D"
        android:text="@string/the_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"

        android:textSize="@dimen/_15sdp"
        android:id="@+id/textage" />

    <Spinner
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:backgroundTint="@null"
        style="@style/text"
        android:backgroundTintMode="add"
        android:background="@drawable/style_button"


        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textage" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#13718D"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"

        android:textSize="@dimen/_15sdp"
        android:id="@+id/textgender" />
    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:backgroundTint="@null"

        android:backgroundTintMode="add"
        android:background="@drawable/style_button"


        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textgender" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>