<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TechnicalSupport">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:id="@+id/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_us"
            android:textColor="#13718D"
            android:textSize="@dimen/_20sdp"
            android:id="@+id/textadd"
            android:fontFamily="@font/notolkeaarabic_bold"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#13718D"
            app:layout_constraintTop_toBottomOf="@id/textadd"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/viewone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_with_us"
            android:textSize="@dimen/_15sdp"
            style="@style/text"
            android:fontFamily="@font/notolkeaarabic_bold"
            app:layout_constraintTop_toBottomOf="@id/viewone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/text" />

        <Spinner
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="@null"

            android:backgroundTintMode="add"
            android:background="@drawable/style_button"
            android:id="@+id/cantrey_job"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text"
            android:layout_marginTop="@dimen/_10sdp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:background="@drawable/style_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/message_text"
            android:paddingTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:gravity="top"
            android:textSize="@dimen/_15sdp"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cantrey_job"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/problem" />

        <TextView
            android:id="@+id/textTrins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"

            android:text="@string/a_photo_or_video_to_illustrate_the_problem"
            android:textColor="#13718D"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/problem" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_25sdp"

            app:layout_constraintTop_toBottomOf="@id/problem"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/upload_a_file"
            android:padding="0dp"
            android:fontFamily="@font/notolkeaarabic_bold"
            android:textColor="@color/white"

            app:backgroundTint="@null"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTintMode="add"
            android:background="@drawable/style_buttonsignup"
            android:textSize="8sp"

            android:textAllCaps="false"
            android:id="@+id/upload" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="57dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload"
            android:layout_marginTop="@dimen/_80sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/send"
            android:includeFontPadding="false"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/notolkeaarabic_bold"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTintMode="add"
            android:background="@drawable/style_buttonsignup"
            android:textSize="20sp"
            android:elevation="3dp"
            android:textAllCaps="false"
            android:id="@+id/file" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>